// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlatList renders all the bells and whistles 1`] = `
<RCTScrollView
  ItemSeparatorComponent={[Function]}
  ListEmptyComponent={[Function]}
  ListFooterComponent={[Function]}
  ListHeaderComponent={[Function]}
  accessibilityCollection={
    Object {
      "columnCount": 2,
      "hierarchical": false,
      "itemCount": 5,
      "rowCount": 3,
    }
  }
  data={
    Array [
      Object {
        "id": "0",
      },
      Object {
        "id": "1",
      },
      Object {
        "id": "2",
      },
      Object {
        "id": "3",
      },
      Object {
        "id": "4",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  getItemLayout={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onRefresh={[MockFunction]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshControl={
    <RefreshControlMock
      onRefresh={[MockFunction]}
      refreshing={false}
    />
  }
  refreshing={false}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  viewabilityConfigCallbackPairs={Array []}
>
  <RCTRefreshControl />
  <View>
    <View
      onLayout={[Function]}
    >
      <header />
    </View>
    <View
      style={null}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityCollectionItem={
            Object {
              "columnIndex": 0,
              "columnSpan": 1,
              "heading": false,
              "itemIndex": 0,
              "rowIndex": 0,
              "rowSpan": 1,
            }
          }
          importantForAccessibility="yes"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <item
            value="0"
          />
        </View>
        <View
          accessibilityCollectionItem={
            Object {
              "columnIndex": 1,
              "columnSpan": 1,
              "heading": false,
              "itemIndex": 1,
              "rowIndex": 0,
              "rowSpan": 1,
            }
          }
          importantForAccessibility="yes"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <item
            value="1"
          />
        </View>
      </View>
      <separator />
    </View>
    <View
      style={null}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityCollectionItem={
            Object {
              "columnIndex": 0,
              "columnSpan": 1,
              "heading": false,
              "itemIndex": 2,
              "rowIndex": 1,
              "rowSpan": 1,
            }
          }
          importantForAccessibility="yes"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <item
            value="2"
          />
        </View>
        <View
          accessibilityCollectionItem={
            Object {
              "columnIndex": 1,
              "columnSpan": 1,
              "heading": false,
              "itemIndex": 3,
              "rowIndex": 1,
              "rowSpan": 1,
            }
          }
          importantForAccessibility="yes"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <item
            value="3"
          />
        </View>
      </View>
      <separator />
    </View>
    <View
      style={null}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityCollectionItem={
            Object {
              "columnIndex": 0,
              "columnSpan": 1,
              "heading": false,
              "itemIndex": 4,
              "rowIndex": 2,
              "rowSpan": 1,
            }
          }
          importantForAccessibility="yes"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <item
            value="4"
          />
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
    >
      <footer />
    </View>
  </View>
</RCTScrollView>
`;

exports[`FlatList renders empty list 1`] = `
<RCTScrollView
  accessibilityCollection={
    Object {
      "columnCount": 1,
      "hierarchical": false,
      "itemCount": 0,
      "rowCount": 0,
    }
  }
  data={Array []}
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  viewabilityConfigCallbackPairs={Array []}
>
  <View />
</RCTScrollView>
`;

exports[`FlatList renders null list 1`] = `
<RCTScrollView
  accessibilityCollection={
    Object {
      "columnCount": 1,
      "hierarchical": false,
      "itemCount": 0,
      "rowCount": 0,
    }
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  viewabilityConfigCallbackPairs={Array []}
>
  <View />
</RCTScrollView>
`;

exports[`FlatList renders simple list (multiple columns) 1`] = `
<RCTScrollView
  accessibilityCollection={
    Object {
      "columnCount": 2,
      "hierarchical": false,
      "itemCount": 3,
      "rowCount": 2,
    }
  }
  data={
    Array [
      Object {
        "key": "i1",
      },
      Object {
        "key": "i2",
      },
      Object {
        "key": "i3",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  viewabilityConfigCallbackPairs={Array []}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityCollectionItem={
            Object {
              "columnIndex": 0,
              "columnSpan": 1,
              "heading": false,
              "itemIndex": 0,
              "rowIndex": 0,
              "rowSpan": 1,
            }
          }
          importantForAccessibility="yes"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <item
            value="i1"
          />
        </View>
        <View
          accessibilityCollectionItem={
            Object {
              "columnIndex": 1,
              "columnSpan": 1,
              "heading": false,
              "itemIndex": 1,
              "rowIndex": 0,
              "rowSpan": 1,
            }
          }
          importantForAccessibility="yes"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <item
            value="i2"
          />
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityCollectionItem={
            Object {
              "columnIndex": 0,
              "columnSpan": 1,
              "heading": false,
              "itemIndex": 2,
              "rowIndex": 1,
              "rowSpan": 1,
            }
          }
          importantForAccessibility="yes"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <item
            value="i3"
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`FlatList renders simple list 1`] = `
<RCTScrollView
  accessibilityCollection={
    Object {
      "columnCount": 1,
      "hierarchical": false,
      "itemCount": 3,
      "rowCount": 3,
    }
  }
  data={
    Array [
      Object {
        "key": "i1",
      },
      Object {
        "key": "i2",
      },
      Object {
        "key": "i3",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  viewabilityConfigCallbackPairs={Array []}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityCollectionItem={
          Object {
            "columnIndex": 0,
            "columnSpan": 1,
            "heading": false,
            "itemIndex": 0,
            "rowIndex": 0,
            "rowSpan": 1,
          }
        }
        importantForAccessibility="yes"
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <item
          value="i1"
        />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityCollectionItem={
          Object {
            "columnIndex": 0,
            "columnSpan": 1,
            "heading": false,
            "itemIndex": 1,
            "rowIndex": 1,
            "rowSpan": 1,
          }
        }
        importantForAccessibility="yes"
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <item
          value="i2"
        />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityCollectionItem={
          Object {
            "columnIndex": 0,
            "columnSpan": 1,
            "heading": false,
            "itemIndex": 2,
            "rowIndex": 2,
            "rowSpan": 1,
          }
        }
        importantForAccessibility="yes"
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <item
          value="i3"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`FlatList renders simple list using ListItemComponent (multiple columns) 1`] = `
<RCTScrollView
  ListItemComponent={[Function]}
  accessibilityCollection={
    Object {
      "columnCount": 2,
      "hierarchical": false,
      "itemCount": 3,
      "rowCount": 2,
    }
  }
  data={
    Array [
      Object {
        "key": "i1",
      },
      Object {
        "key": "i2",
      },
      Object {
        "key": "i3",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  viewabilityConfigCallbackPairs={Array []}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityCollectionItem={
            Object {
              "columnIndex": 0,
              "columnSpan": 1,
              "heading": false,
              "itemIndex": 0,
              "rowIndex": 0,
              "rowSpan": 1,
            }
          }
          importantForAccessibility="yes"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <item
            value="i1"
          />
        </View>
        <View
          accessibilityCollectionItem={
            Object {
              "columnIndex": 1,
              "columnSpan": 1,
              "heading": false,
              "itemIndex": 1,
              "rowIndex": 0,
              "rowSpan": 1,
            }
          }
          importantForAccessibility="yes"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <item
            value="i2"
          />
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityCollectionItem={
            Object {
              "columnIndex": 0,
              "columnSpan": 1,
              "heading": false,
              "itemIndex": 2,
              "rowIndex": 1,
              "rowSpan": 1,
            }
          }
          importantForAccessibility="yes"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <item
            value="i3"
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`FlatList renders simple list using ListItemComponent 1`] = `
<RCTScrollView
  ListItemComponent={[Function]}
  accessibilityCollection={
    Object {
      "columnCount": 1,
      "hierarchical": false,
      "itemCount": 3,
      "rowCount": 3,
    }
  }
  data={
    Array [
      Object {
        "key": "i1",
      },
      Object {
        "key": "i2",
      },
      Object {
        "key": "i3",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  viewabilityConfigCallbackPairs={Array []}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityCollectionItem={
          Object {
            "columnIndex": 0,
            "columnSpan": 1,
            "heading": false,
            "itemIndex": 0,
            "rowIndex": 0,
            "rowSpan": 1,
          }
        }
        importantForAccessibility="yes"
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <item
          value="i1"
        />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityCollectionItem={
          Object {
            "columnIndex": 0,
            "columnSpan": 1,
            "heading": false,
            "itemIndex": 1,
            "rowIndex": 1,
            "rowSpan": 1,
          }
        }
        importantForAccessibility="yes"
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <item
          value="i2"
        />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityCollectionItem={
          Object {
            "columnIndex": 0,
            "columnSpan": 1,
            "heading": false,
            "itemIndex": 2,
            "rowIndex": 2,
            "rowSpan": 1,
          }
        }
        importantForAccessibility="yes"
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <item
          value="i3"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;
